// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ComboBox rendering renders expected elements 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="random-id-list"
    aria-expanded={false}
    aria-invalid={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={[Function]}
    id="random-id-add"
    onClick={[Function]}
  />
  <React.Portal
    container="body"
  >
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when document.fullscreenElement is set 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="random-id-list"
    aria-expanded={false}
    aria-invalid={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={[Function]}
    id="random-id-add"
    onClick={[Function]}
  />
  <React.Portal
    container="fullscreen"
  >
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when error is not set 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="random-id-list"
    aria-expanded={false}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={[Function]}
    id="random-id-add"
    onClick={[Function]}
  />
  <React.Portal
    container="body"
  >
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when noLayer is true 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="random-id-list"
    aria-expanded={false}
    aria-invalid={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="random-id"
    noLayer={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={[Function]}
    id="random-id-add"
    onClick={[Function]}
  />
  <React.Portal
    container="body"
  >
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when the suggestions are displayed 1`] = `
<div
  className="ComboBox"
>
  <Layer
    aria-activedescendant="random-id-0"
    aria-autocomplete="list"
    aria-controls="random-id-list"
    aria-expanded={true}
    as="input"
    autoComplete="off"
    className="ComboBox__input"
    id="random-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    type="text"
    value="x"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={[Function]}
    id="random-id-add"
    onClick={[Function]}
  />
  <React.Portal
    container="body"
  >
    <Layer
      aria-label="Options"
      className="ComboBox__list"
      id="random-id-list"
      level={NaN}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        {
          "display": null,
        }
      }
    >
      <div
        aria-selected={true}
        className="ComboBox__option TestClass"
        data-index={0}
        id="random-id-0"
        key={0}
        role="option"
      >
        Test suggestion 0
      </div>
      <div
        aria-selected={false}
        className="ComboBox__option TestClass"
        data-index={1}
        id="random-id-1"
        key={1}
        role="option"
      >
        Test suggestion 1
      </div>
    </Layer>
  </React.Portal>
</div>
`;
